test_suite5/ALAN/test_suite/alan-2022-examples/failing/003570_mutation.alan
source I5caa begin if 38054 then relax elsif 01 then relax if end end
